Adding a unique slug generator utils function for the post instance

--- a/src/posts/templates/posts/post_list.html
+++ b/src/posts/templates/posts/post_list.html
@@ -1,6 +1,9 @@
 {% for post in post_list %}
 
-  <h3>{{ post.user.username }} | {{ post.title }}</h3>
+  <h4>{{ post.user.username }} |
+    <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+  </h4>
+
   <h5>{{ post.created|timesince }}</h5>
   {{ post.content }}<hr>
 {% endfor %}
