--- a/src/posts/templates/posts/post_detail.html
+++ b/src/posts/templates/posts/post_detail.html
@@ -1,2 +1,4 @@
-<h4>{{post.user.username}} | {{ post.title }}</h4>
+<h4>{{post.user.username}}
+  {% if post.title %} | {{ post.title }} {% endif %}
+</h4>
 {{ post.content }}<hr>
