--- a/src/accounts/templates/accounts/user_profile.html
+++ b/src/accounts/templates/accounts/user_profile.html
@@ -5,35 +5,20 @@
 
 <!--Ajax calls -->
 <div id="posts-user">
+
   <h1 id='user-id'>{{ object.username }}</h1>
+  <p>
+    <a href="{{ object.profile.get_follow_url }}">
+      <!-- make it disappear for user iwn profile -->
+      <b>{% if following %}Unfollow{% else %}Follow{% endif %}</b>
+    </a>
+  </p>
+
 </div>
 
-<!--Django templates-->
-<h1>{{ object.username }}</h1>
+<!--Django templates for following users; turn it into ajax-->
 
-<p>
-  <a href="{{ object.profile.get_follow_url }}">
-    <!-- make it disappear for user iwn profile -->
-    <b>{% if following %}Unfollow{% else %}Follow{% endif %}</b>
-  </a>
-</p>
-<b>Followers: {{ object.followed_by.all.count }}</b>
-
-
-<h2>Posts</h2>
-{% for post in object.post_set.all %}
-  {{ post }}<br><hr>
-{% endfor %}
-
-<h2>Following ({{ object.profile.get_following.count }}) </h2>
-
-{% for user in object.profile.get_following %}
-  <a href="/profiles/{{ user.username }}">{{ user.username }}</a><br><hr>
-{% empty %}
-<h4>Not following any users</h4>
-{% endfor %}
-
-<h2>Followed By ({{ object.followed_by.all.count }})</h2>
+<h2>List of Followers ({{ object.followed_by.all.count }})</h2>
 {% for profile in object.followed_by.all %}
   <a href="/profiles/{{ profile.user.username }}">
     {{ profile.user.username }}
@@ -41,4 +26,12 @@
   <br><hr>
 {% empty %}
 <h4>Not followed by any users</h4>
+{% endfor %}
+
+<h2>List of Following ({{ object.profile.get_following.count }}) </h2>
+
+{% for user in object.profile.get_following %}
+  <a href="/profiles/{{ user.username }}">{{ user.username }}</a><br><hr>
+{% empty %}
+<h4>Not following any users</h4>
 {% endfor %}
