--- a/src/accounts/templates/accounts/user_registration.html
+++ b/src/accounts/templates/accounts/user_registration.html
@@ -1,3 +1,9 @@
+{% extends "base.html" %}
+{% load static %}
+
+{% block content %}
 <div>
   {% include "posts/generic_form.html" with form=form button_title='Register' %}
 </div>
+
+{% endblock content %}
