--- a/src/accounts/static/accounts/css/user-profile.css
+++ b/src/accounts/static/accounts/css/user-profile.css
@@ -1,6 +1,6 @@
 #posts-user {
-  padding: 10px;
-  margin-top: 100px;
+  padding: 30px;
+  /*margin-top: 100px;*/
 }
 
 #posts-container #single-post {
