--- a/src/accounts/templates/accounts/user_profile.html
+++ b/src/accounts/templates/accounts/user_profile.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block title %} {{ block.super }} {{ user.username }} {% endblock title %}
+
 {% block content %}
 <div id="posts-user">
 
