--- a/src/accounts/templates/accounts/user_registration.html
+++ b/src/accounts/templates/accounts/user_registration.html
@@ -1,9 +1,18 @@
 {% extends "base.html" %}
 {% load static %}
+{% load crispy_forms_tags %}
+
+{% block title %} {{ block.super }} Register {% endblock title %}
 
 {% block content %}
-<div>
-  {% include "posts/generic_form.html" with form=form button_title='Register' %}
+<div class='row'>
+    <div class='col-sm-6 col-sm-offset-3'>
+        <h1>Register</h1>
+        <form  class='form {% if form_class %}{{ form_class }}{% endif %}' method='POST' action="{% if action_url %}{{ action_url }}{% endif %}">
+           {% csrf_token %}
+            {{ form|crispy }}
+            <input class='btn btn-primary' type="submit" value="Register" />
+        </form>
+    </div>
 </div>
-
 {% endblock content %}
