--- a/src/accounts/templates/registration/login.html
+++ b/src/accounts/templates/registration/login.html
@@ -1,19 +1,43 @@
-<h1>Welcome to Frac</h1>
-{% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
-{% endif %}
+{% extends "base.html" %}
+{% load static %}
 
-{% if next %}
-    {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
-    {% else %}
-    <p>Please login to access your account.</p>
-    {% endif %}
-{% endif %}
+{% block title %} {{ block.super }} Login {% endblock title %}
 
-<div>
-  {% include "posts/generic_form.html" with form=form button_title='Login' %}
+{% block content %}
+
+<div class="col-sm-6 col-sm-offset-3 text-center">
+  <h1>Welcome to Frac</h1>
+
+  {% if form.errors %}
+  <p>Your username and password didn't match. Please try again.</p>
+  {% endif %}
+
+  {% if next %}
+      {% if user.is_authenticated %}
+      <p>Your account doesn't have access to this page. To proceed,
+      please login with an account that has access.</p>
+      {% else %}
+      <p>Please login to see this page.</p>
+      {% endif %}
+  {% endif %}
+
+  <form method="post" action="{% url 'login' %}">
+  {% csrf_token %}
+
+  <div class="form-group">
+    {{ form.username.label_tag }}
+    {{ form.username }}
+  </div>
+
+  <div class="form-group">
+    {{ form.password.label_tag }}
+    {{ form.password }}
+  </div>
+
+  <button type="submit" class="btn btn-default">Login</button>
   <input type="hidden" name="next" value="{{ next }}" />
-  <p>Not a member yet ?! Register <a href="{% url 'register' %}">here</a>.</p>
+  </form>
+<p>Not a member yet ?! Register <a href="{% url 'register' %}">here</a>.</p>
 </div>
+
+{% endblock content %}
