--- a/src/posts/static/posts/css/post-style.css
+++ b/src/posts/static/posts/css/post-style.css
@@ -1,19 +1,22 @@
 #posts-container {
-  padding: 10px;
-  margin-top: 100px;
+  padding: 30px;
+  /*margin-top: 100px;*/
 }
 
 #posts-container #single-post {
-  border-radius: 5px;
+
   padding: inherit;
+  border-radius: 10px;
   margin-bottom: 50px;
   background-color: #F4F4F5;
+
 }
 
 #post-container {
-  margin-top: 100px;
-  border-radius: 5px;
-  padding: 10px;
+  border-radius: 10px;
+  padding: 30px;
+  margin-top: 30px;
   margin-bottom: 50px;
   background-color: #F4F4F5;
+
 }
