--- a/src/posts/templates/posts/post_detail.html
+++ b/src/posts/templates/posts/post_detail.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block title %} {{ block.super }} {{ post.title }} {% endblock title %}
+
 {% block content %}
 <!--  Must be replaced with an ajax call -->
 <div id="post-container">
 
-  <h4><a href="{{ user.profile.get_absolute_url }}">{{post.user.username}}</a>
+  <h4><a href="/profiles/{{ post.user.username }}/">{{post.user.username}}</a>
     {% if post.title %} | {{ post.title }} {% endif %}
   </h4>
   {{ post.content }}
@@ -14,4 +16,6 @@
   <link rel="stylesheet" type="text/css" href="{% static '/posts/css/post-style.css' %}" />
 
 </div>
+
+
 {% endblock content %}
