--- a/src/posts/templates/posts/post_list.html
+++ b/src/posts/templates/posts/post_list.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block title %} {{ block.super }} Posts {% endblock title %}
+
 {% block content %}
     <div id="posts-container">
       <!--  My css for posts list -->
