--- a/src/posts/templates/posts/generic_form.html
+++ b/src/posts/templates/posts/generic_form.html
@@ -1,14 +1,6 @@
-{% extends "base.html" %}
-{% load static %}
 {% load crispy_forms_tags %}
-
-{% block content %}
-
 <form class="form {% if form_class %}{{ form_class }}{% endif %}" action="{% if action_url %}{{ action_url }}{% endif %}" method="post">
   {% csrf_token %}
   {{ form|crispy }}
-  <input type="submit" class="button" value="{{ button_title }}">
+  <input type="submit" class="btn btn-primary" value="{{ button_title }}">
 </form>
-
-
-{% endblock content %}
