--- a/src/posts/templates/posts/post_create.html
+++ b/src/posts/templates/posts/post_create.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 {% load static %}
+{% load crispy_forms_tags %}
+
+{% block title %} {{ block.super }}Create Post {% endblock title %}
 
 {% block content %}
 
-<div>
-  {% include "posts/generic_form.html" with form=form button_title='Post' %}
-</div>
+<h1>Create Post</h1>
+{% include "posts/generic_form.html" with form=form button_title='Post' %}
 
 {% endblock content %}
