Added password change, reset, smtp email, with Django CBV

--- a/src/accounts/templates/accounts/login.html
+++ b/src/accounts/templates/accounts/login.html
@@ -38,6 +38,7 @@
   <input type="hidden" name="next" value="{{ next }}" />
   </form>
 <p>Not a member yet ?! Register <a href="{% url 'register' %}">here</a>.</p>
+<p>Can't Remember you password ?! Reset password <a href="{% url 'password_reset' %}">here</a>.</p>
 </div>
 
 {% endblock content %}
