--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -22,8 +22,16 @@
                 <span class="fa fa-user-o fa-lg"></span>
               </a>
             </li>
-            <li role="separator" class="divider"></li>
-            <li><a href="{% url 'logout' %}"><span class="fa fa-power-off fa-lg"></span></a></li>
+            <li>
+              <a href="{% url 'password_change' %}">
+                <span class="fa fa-cog fa-lg"></span>
+              </a>
+            </li>
+            <li>
+              <a href="{% url 'logout' %}">
+                <span class="fa fa-power-off fa-lg"></span>
+              </a>
+            </li>
           </ul>
 
           {% else %}
