--- a/src/accounts/templates/accounts/password_change.html
+++ b/src/accounts/templates/accounts/password_change.html
@@ -5,7 +5,7 @@
 {% block title %} {{ block.super }} Password change {% endblock %}
 
 {% block content %}
-
+<h1>Change your password</h1>
 <form method="post">{% csrf_token %}
 <div>
 {% if form.errors %}
@@ -43,7 +43,7 @@
 </fieldset>
 
 <div class="submit-row">
-    <input type="submit" value="Change my password" class="default" />
+  <button class="btn btn-default">Change my password</button>
 </div>
 
 </div>
