--- a/src/accounts/templates/accounts/password_reset.html
+++ b/src/accounts/templates/accounts/password_reset.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
-{% load static %}
+
 
 {% block title %} {{ block.super }} Password reset {% endblock %}
 
 {% block content %}
-
+<h1>Reset your password</h1><hr>
 <p>Forgotten your password? Enter your email address below, and we'll email instructions for setting a new one.</p>
 
 <form method="post">{% csrf_token %}
@@ -14,7 +14,7 @@
         <label for="id_email">Email address:</label>
         {{ form.email }}
     </div>
-    <input type="submit" value="Reset my password" />
+    <button class="btn btn-default">Reset my password</button>
 </fieldset>
 </form>
 
