--- a/src/accounts/templates/accounts/password_reset_done.html
+++ b/src/accounts/templates/accounts/password_reset_done.html
@@ -5,16 +5,17 @@
 
 {% block content %}
 
-<p>
+<h1>Email Sent!</h1><hr>
+<p class="lead">
   We've emailed you instructions for setting your password,
   if an account exists with the email you entered.
   You should receive them shortly.
 </p>
 
-<p>
+<b>
   If you don't receive an email,
   please make sure you've entered the address you registered with,
   and check your spam folder.
-</p>
+</b>
 
 {% endblock %}
