--- a/src/accounts/templates/accounts/password_reset_email.html
+++ b/src/accounts/templates/accounts/password_reset_email.html
@@ -5,7 +5,7 @@ Please go to the following page and choose a new password:
 
 {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
 
-Your username, in case you've forgotten: {{ user.get_username }}
+Your username, in case you've forgotten is: {{ user.get_username }}
 
 Thanks for using our site!
 
