--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,5 +1,6 @@
 {% load static %}
 
+
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -27,7 +28,7 @@
     <div class="container">
 
       <div class="row">
-        <div class='col-md-6 col-sm-3 col-xs-12 col-md-offset-3'>
+        <div class='col-sm-6 col-sm-offset-3'><!-- col-sm-3 col-xs-12  -->
           {% block content %}{% endblock content %}
         </div>
       </div>
