--- a/src/templates/email_activation_link.html
+++ b/src/templates/email_activation_link.html
@@ -1,5 +1,5 @@
 {% autoescape off %}
-Dear {{ user.username }},
+Dear {{ new_user }}
 We are very happy to welcome you in the Frac community.
 To activate your account, click on the link below:
 
