--- a/src/templates/register_complete.html
+++ b/src/templates/register_complete.html
@@ -9,7 +9,7 @@
   <h1>Registration complete!</h1><hr>
   <p class="lead">
     Thank you for your email confirmation. <br>
-    Now you can login your account <a href="{% url 'login' %}">here</a>.
+    Now you can login your account <a href="{% url 'login' %}"><b>here</b></a>.
   </p>
 
 {% endblock content %}
