--- a/src/static/css/navbar.css
+++ b/src/static/css/navbar.css
@@ -1,4 +1,4 @@
-body {
+/*body {
     padding-top: 73px;
 }
 .navbar-brand {
@@ -10,8 +10,8 @@ body {
 .navbar-center
 {
     position: absolute;
-    /*width: 100%;*/
+    width: 100%;
     left: 223px;
     text-align: center;
     margin:0 auto;
-}
+}*/
