--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -13,7 +13,7 @@
           </button>
 
           <a class="navbar-brand" href="{% url 'posts:list' %}">
-              Frac
+              ffrac
             <span class="fa fa-trophy fa-lg"></span>
           </a>
         </div>
@@ -45,7 +45,7 @@
               </a>
               <!--  display all list of user gifts -->
               <ul class="dropdown-menu">
-                
+
               </ul>
             </li>
           </ul>
